--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.28.2
-tensorflow==2.13.0
-scikit-learn==1.3.2
-pandas==2.1.3
-numpy==1.24.3
-plotly==5.17.0
-matplotlib==3.8.2
+streamlit>=1.28.0
+tensorflow>=2.12.0
+scikit-learn>=1.3.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.15.0
