--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas
-numpy
-plotly
-scikit-learn
+streamlit==1.28.0
+pandas==2.0.3
+numpy==1.24.3
+plotly==5.15.0
+scikit-learn==1.3.0
+tensorflow-cpu==2.13.0
